[package]
name = "scufflecloud-email"
version = "0.1.0"
authors = ["Scuffle <opensource@scuffle.cloud>"]
edition = "2024"
license = "AGPL-3.0"
publish = false
readme = "README.md"
repository = "https://github.com/scufflecloud/scuffle"
description = "Email service for scuffle.cloud"

[[bin]]
name = "scufflecloud-email-standalone"
path = "bin/standalone/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22.1"
email-traits = { path = "./traits", package = "scufflecloud-email-traits" }
ext-traits = { path = "../ext-traits", package = "scufflecloud-ext-traits" }
http = "1.3.1"
mail-builder = "0.4.4"
pb = { package = "scufflecloud-proto", path = "../proto" }
prost = "0.14.1"
reqsign = { version = "0.17.0", default-features = false, features = ["aws"] }
reqwest = { features = ["rustls-tls-native-roots-no-provider"], version = "0.12.23", default-features = false }
rustls = { default-features = false, version = "0.23.31", features = ["aws_lc_rs"] }
scuffle-bootstrap = { path = "../../crates/bootstrap" }
scuffle-bootstrap-telemetry = { features = ["opentelemetry-logs", "opentelemetry-traces"], path = "../../crates/bootstrap-telemetry" }
scuffle-context = { path = "../../crates/context" }
scuffle-http = { features = ["tracing", "tls-rustls"], path = "../../crates/http" }
scuffle-settings = { features = ["all-formats", "bootstrap"], path = "../../crates/settings" }
scuffle-signal = { features = ["bootstrap"], path = "../../crates/signal" }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.145"
smart-default = "0.7.1"
thiserror = "2.0.16"
tinc = { path = "../../crates/tinc" }
tonic = "0.14.1"
tonic-reflection = "0.14.1"
tonic-types = "0.14.1"
tower-http = { features = ["trace"], version = "0.6.6" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package.metadata.sync-readme.badges]
docs-rs = false
crates-io = false
license = true
codecov = true
