[package]
name = "scufflecloud-ext-traits"
version = "0.1.0"
authors = ["Scuffle <opensource@scuffle.cloud>"]
edition = "2024"
license = "AGPL-3.0"
publish = false
readme = "README.md"
repository = "https://github.com/scufflecloud/scuffle"
description = "Extension traits for Scuffle Cloud"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
chrono = "0.4"
http = "1"
prost-types = "0.14"
tonic = "0.14"
tonic-types = "0.14"
tracing = "0.1"
url = "2"

[package.metadata.sync-readme.badges]
docs-rs = false
crates-io = false
license = true
codecov = true
