load("//misc/utils/rust:manifest.bzl", "cargo_toml")
load("//misc/utils/rust:package.bzl", "scuffle_package")

cargo_toml()

scuffle_package(
    aliases = {
        "//cloud/ext-traits": "ext_traits",
    },
    crate_name = "scufflecloud-geo-ip",
    deps = [
        "//cloud/ext-traits",
    ],
)
