[package]
name = "scufflecloud-geo-ip"
authors = ["Scuffle <opensource@scuffle.cloud>"]
edition = "2024"
license = "AGPL-3.0"
publish = false
readme = "README.md"
repository = "https://github.com/scufflecloud/scuffle"

[dependencies]
axum = { version = "0.8", default-features = false }
futures = "0.3"
ipnetwork = "0.21"
maxminddb = "0.26.0"
serde = "1"
thiserror = "2"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
