load("//misc/utils/rust:manifest.bzl", "cargo_toml")
load("//misc/utils/rust:package.bzl", "scuffle_package")

cargo_toml()

deps = [
    "//crates/bootstrap",
    "//crates/bootstrap-telemetry",
    "//crates/context",
    "//crates/settings",
    "//crates/signal",
    "//cloud/ingest/traits",
]

aliases = {
    "//cloud/ingest/traits": "ingest_traits",
}

scuffle_package(
    aliases = aliases,
    crate_name = "scufflecloud-ingest",
    deps = deps,
)

scuffle_package(
    name = "bin",
    srcs = glob([
        "bin/standalone/**/*.rs",
    ]),
    aliases = aliases,
    crate_name = "scufflecloud-ingest-standalone",
    crate_type = "bin",
    readme = False,
    deps = deps + [":ingest"],
)
