load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("//misc/utils:proto_descriptor_set.bzl", "proto_descriptor_set")
load("//misc/utils/rust:manifest.bzl", "cargo_toml")
load("//misc/utils/rust:package.bzl", "scuffle_build_script", "scuffle_package")

cargo_toml()

proto_library(
    name = "pb",
    srcs = glob(["pb/**"]),
    strip_import_prefix = "/cloud/proto/pb",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/tinc:protobuf",
        "@protobuf//:descriptor_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:timestamp_proto",
        "@protobuf//:any_proto",
        "@protobuf//:duration_proto",
    ],
)

proto_descriptor_set(
    name = "tinc_fds",
    deps = [":pb"],
)

scuffle_build_script(
    name = "build_script",
    data = [":tinc_fds"],
    env = {
        "TINC_SCUFFLE_CLOUD_COMPILED_FD": "$(location :tinc_fds)",
    },
    deps = ["//crates/tinc/build"],
)

scuffle_package(
    crate_name = "scufflecloud-proto",
    deps = [
        ":build_script",
        "//crates/tinc",
    ],
)
