[package]
name = "scufflecloud-proto"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
description = "Protobuf definitions for various services used by scuffle.cloud"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
publish = false

[dependencies]
tinc = { path = "../../crates/tinc" }

[build-dependencies]
glob = "0.3"
tinc-build = { path = "../../crates/tinc/build" }

[package.metadata.sync-readme]
badge-style = "flat-square"

[package.metadata.sync-readme.badges]
docs-rs = false
crates-io = false
license = true
codecov = true
