[package]
name = "scufflecloud-proto"
version = "0.1.0"
authors = ["Scuffle <opensource@scuffle.cloud>"]
edition = "2024"
license = "AGPL-3.0"
publish = false
readme = "README.md"
repository = "https://github.com/scufflecloud/scuffle"
description = "Protobuf definitions for various services used by scuffle.cloud"

[dependencies]
tinc = { path = "../../crates/tinc" }

[build-dependencies]
glob = "0.3"
tinc-build = { path = "../../crates/tinc/build" }

[package.metadata.sync-readme.badges]
docs-rs = false
crates-io = false
license = true
codecov = true
