[package]
name = "scuffle-aac"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A crate for decoding AAC audio headers."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-aac"
keywords = ["aac", "audio", "codec"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
document-features = { optional = true, version = "0.2" }
num-derive = "0.4"
num-traits = "0.2"
scuffle-bytes-util = { path = "../bytes-util", version = "0.1.3" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.sync-readme]
badge-style = "flat-square"

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov = true
