[package]
name = "scuffle-bootstrap"
version = "0.1.7"
authors = ["Scuffle <opensource@scuffle.cloud>"]
documentation = "https://docs.rs/scuffle-bootstrap"
edition = "2024"
keywords = ["bootstrap", "binary", "cli", "config"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/scufflecloud/scuffle"
description = "A utility crate for creating binaries."

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "scuffle-bootstrap-basic"
path = "examples/basic.rs"

[[example]]
name = "scuffle-bootstrap-cli"
path = "examples/cli.rs"

[[example]]
name = "scuffle-bootstrap-tracing"
path = "examples/tracing.rs"

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
anyhow = "1.0"
futures = "0.3"
pin-project-lite = "0.2"
tokio = { features = ["full"], version = "1" }

document-features = { optional = true, version = "0.2" }
scuffle-bootstrap-derive = { path = "derive", version = "=0.1.7" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1" }
scuffle-context = { path = "../context", version = "0.1" }

[dev-dependencies]
insta = "1"
postcompile = { path = "../postcompile" }
scuffle-future-ext = { path = "../future-ext" }
scuffle-signal = { features = ["bootstrap"], path = "../signal" }

# For examples:
scuffle-settings = { features = ["bootstrap"], path = "../settings" }
serde = "1"
serde_derive = "1"
smart-default = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = [
    "--cfg",
    "docsrs",
    "--sort-modules-by-appearance",
    "--generate-link-to-definition",
]

[package.metadata.sync-readme.rustdoc-mappings]
changelog = "./CHANGELOG.md"

[package.metadata.sync-readme.badges]
docs-rs = true
crates-io = true
license = true
codecov = true
